#ifndef COMBAT_CONTROLLER_H
#define COMBAT_CONTROLLER_H

#include <cstdint>
#include <map>
#include <optional>
#include <string>
#include <unordered_map>
#include <utility>
#include <vector>

#include "../../common/messages.h"
#include "../core/config.h"

#include "command_result.h"
#include "enemy_npc.h"
#include "map.h"
#include "player.h"

class ClanManager;

class CombatController {
public:
    CombatController(const AttackConfig& config, std::map<uint16_t, Player>& players,
                     const ItemCatalog& catalog, std::map<uint16_t, EnemyNpc>& enemy_npcs,
                     const NpcDropConfig& drop_config, const NpcDropConfig& drop_config_dungeon,
                     const BalanceConfig& balance, const NpcConfig& npc_config,
                     ClanManager& clan_manager, const std::unordered_map<std::string, Map>& maps,
                     const MessagesConfig& msgs);

    CommandResult melee_attack(uint16_t attacker_id, uint16_t target_id, uint32_t current_tick);
    CommandResult update_npc_ai(uint32_t current_tick);

    CommandResult spell_attack_player(uint16_t attacker_id, uint16_t target_id,
                                      uint32_t current_tick);
    CommandResult spell_attack_npc(uint16_t attacker_id, uint16_t npc_target_id,
                                   uint32_t current_tick);

    uint8_t crit_chance_for(const Player& p) const;
    uint8_t dodge_chance_for(const Player& p) const;
    std::pair<uint16_t, uint16_t> unarmed_damage_range() const;
    const AttackConfig& get_attack_config() const { return config; }

    void fill_player_stats_event(PlayerStatsEvent& ev, const Player& p) const;

private:
    bool in_range(uint16_t attacker_x, uint16_t attacker_y, uint16_t target_x,
                  uint16_t target_y) const;
    bool in_range(uint16_t attacker_x, uint16_t attacker_y, uint16_t target_x, uint16_t target_y,
                  uint32_t range_px) const;
    uint32_t calculate_damage(const Player& attacker);
    int count_nearby_clan_members(const Player& player) const;
    double get_clan_bonus(const Player& player) const;
    CommandResult notify_entity_attacked(Player& attacker, uint16_t target_id, uint32_t damage,
                                         uint32_t target_hp_current, uint32_t target_hp_max,
                                         const std::string& target_name,
                                         const std::string& target_clan_name, bool target_is_dead,
                                         uint8_t target_level, bool esquivado);
    bool is_critical_attack(const Player& attacker);
    uint32_t calculate_defense(const Player& target);
    uint32_t calculate_object_defense(const InventorySlot& object_slot);
    Player* get_nearest_player(const EnemyNpc& npc);
    const NpcDropConfig& drop_config_for(const EnemyNpc& npc) const;
    void drop_inventory_on_death(Player& target,
                                 std::map<std::string, std::vector<ItemDroppedEvent>>& drops,
                                 std::vector<ServerEvent>& target_events);
    void on_player_death(Player& victim, uint16_t victim_id, Player* killer,
                         std::vector<ServerEvent>& victim_events,
                         std::map<std::string, std::vector<ItemDroppedEvent>>& drops,
                         std::vector<ServerEvent>* killer_events = nullptr);
    // Returns true if the NPC was blocked and the attack phase should be skipped.
    bool chase_target(uint16_t npc_id, EnemyNpc& npc, const Player& target, bool in_attack_range,
                      bool player_in_safe_zone, const Map* map,
                      std::map<uint16_t, std::vector<ServerEvent>>& targeted);
    void npc_attack_target(uint16_t npc_id, EnemyNpc& npc, Player& target, uint32_t current_tick,
                           std::vector<ServerEvent>& broadcast,
                           std::map<uint16_t, std::vector<ServerEvent>>& targeted,
                           std::map<std::string, std::vector<ItemDroppedEvent>>& ground_drops);
    CommandResult melee_attack_player(uint16_t attacker_id, uint16_t target_id,
                                      uint32_t current_tick);
    CommandResult melee_attack_npc(uint16_t attacker_id, uint16_t npc_target_id,
                                   uint32_t current_tick);

    std::optional<CommandResult> validate_pvp(const Player& attacker, const Player& target) const;
    CommandResult resolve_player_attack(Player& attacker, Player& target, uint16_t target_id,
                                        uint32_t range_px);
    CommandResult resolve_npc_attack(Player& attacker, EnemyNpc& npc_target, uint16_t npc_target_id,
                                     uint32_t range_px, bool include_item_drop = true);
    void move_random(EnemyNpc& npc, const Map* map,
                     std::map<uint16_t, std::vector<ServerEvent>>& targeted, uint16_t npc_id);
    bool try_move_npc(EnemyNpc& npc, uint16_t npc_id, const Map* map,
                      std::map<uint16_t, std::vector<ServerEvent>>& targeted, Direction dir);

    const AttackConfig& config;
    const BalanceConfig& balance;
    const NpcConfig& npc_config;
    std::map<uint16_t, Player>& players;
    ClanManager& clan_manager;
    const ItemCatalog& item_catalog_;
    Rng rng;
    std::map<uint16_t, EnemyNpc>& enemy_npcs;
    NpcDropConfig npc_drop_config;
    NpcDropConfig npc_drop_config_dungeon;
    const std::unordered_map<std::string, Map>& maps;
    const MessagesConfig& msgs_;
};

#endif
