@startuml
title Servicios del Servidor

class Game {
  + process_command(id, cmd): CommandResult
  + tick(): CommandResult
}

class PlayerSessionService {
  + handle_login(player_id, cmd): CommandResult
  + handle_create_character(player_id, cmd): CommandResult
}

class SpawnService {
  + spawn_mobs(): CommandResult
}

class CombatController {
  + melee_attack(a, t, tick): CommandResult
  + update_npc_ai(tick): CommandResult
}

class GroundItemService {
  + handle_pickup_item(player_id, cmd): CommandResult
  + handle_drop_item(player_id, cmd): CommandResult
}

class MerchantService {
  + handle_npc_buy(player_id, cmd): CommandResult
  + handle_npc_sell(player_id, cmd): CommandResult
  + handle_npc_list(player_id): CommandResult
}

class BankService {
  + handle_bank_deposit(player_id, cmd): CommandResult
  + handle_bank_withdraw(player_id, cmd): CommandResult
}

class MapTransitionService {
  + handle_change_map(player_id, cmd): CommandResult
}

class CheatService {
  + dispatch(cheat_type, player_id): CommandResult
  + handle_help(): CommandResult
}

class MapDataService {
  + handle_request(map_name): CommandResult
}

class MovementService {
  + handle_move(player_id, cmd): CommandResult
}

class RegenService {
  + apply_regen(): CommandResult
}

class ResurrectionService {
  + handle_resurrect(player_id): CommandResult
  + process_pending_resurrections(): CommandResult
}

class SpellService {
  + handle_cast_spell(player_id, cmd, tick_count): CommandResult
}

class EntityEventFactory <<namespace>> {
  + make_entity_spawn(player): EntitySpawnEvent
  + make_npc_spawn(npc, npc_id): EntitySpawnEvent
  + make_equip_update(player_id, player): EquipUpdateEvent
}
note bottom of EntityEventFactory
  Namespace de funciones libres (no una clase).
  Solo eventos de spawn/equip; los eventos de
  daño/muerte/movimiento los construyen los
  servicios/CombatController directamente.
end note

Game *--> PlayerSessionService
Game *--> SpawnService
Game *--> CombatController
Game *--> GroundItemService
Game *--> MerchantService
Game *--> BankService
Game *--> MapTransitionService
Game *--> CheatService
Game *--> MapDataService
Game *--> MovementService
Game *--> RegenService
Game *--> ResurrectionService
Game *--> SpellService
PlayerSessionService --> EntityEventFactory
SpawnService --> EntityEventFactory
CombatController --> EntityEventFactory
@enduml